--- a/src/app/app-signup/general-info-form/general-info-form.component.scss
+++ b/src/app/app-signup/general-info-form/general-info-form.component.scss
@@ -16,7 +16,10 @@
   .photo-uploader-container {
     position: relative;
 
-    img {}
+
+    img {
+      border-radius: 50%;
+    }
 
     .uploader {
       position: absolute;
