--- a/src/app/root/main/main.component.html
+++ b/src/app/root/main/main.component.html
@@ -1,18 +1,28 @@
 <div class="main-container">
-    <mat-toolbar *ngIf="!hideToolBar" color="primary">
+    <mat-toolbar class="app-toolbar" style="position : sticky;" *ngIf="!hideToolBar" color="primary">
         <button *ngIf="!hideSideNavigation" mat-icon-button (click)="toggleDrawer()"
             aria-label="Example icon-button with menu icon">
             <mat-icon>menu</mat-icon>
         </button>
         <span>Shifa Telemedicine</span>
 
-        <div class="w-100-p" fxLayout.gt-xs="row" fxLayoutAlign="end" fxLayoutGap="32px">
-            <div class="pr-20">
-                <mat-select [(value)]="selectedLanguage" (selectionChange)="setPortalLanguage()">
+        <div class="w-100-p" fxLayout.gt-xs="row" fxLayoutAlign="end center" fxLayoutGap="32px">
+            <div>
+                <button mat-button [matMenuTriggerFor]="menu">
+                    <mat-icon style="margin-top: -2px;" fontIcon="language"></mat-icon>
+                    <span> {{selectedLanguageValue | portalLanguage | translate}}</span>
+                </button>
+                <mat-menu #menu="matMenu">
+                    <ng-container *ngFor="let lang of portalLanguages">
+                        <button (click)="setPortalLanguage(lang)" mat-menu-item> {{lang.Key | translate}}</button>
+                    </ng-container>
+
+                </mat-menu>
+                <!-- <mat-select [(value)]="selectedLanguage" (selectionChange)="setPortalLanguage()">
                     <mat-option *ngFor="let lang of portalLanguages" aria-selected="true" [value]="lang.Value">
                         {{lang.Key | translate}}
                     </mat-option>
-                </mat-select>
+                </mat-select> -->
             </div>
 
         </div>
