--- a/src/app/app-signup/signup-stepper-container/signup-stepper-container.component.scss
+++ b/src/app/app-signup/signup-stepper-container/signup-stepper-container.component.scss
@@ -3,26 +3,34 @@
 @import "../../../styles/shared/page-header.scss";
 @import "../../../styles/utils/spacing";
 
-.signup-page-container{
-   padding : 64px 32px;
-  
+.signup-page-container {
+    padding: 64px 32px;
+    width: 100%;
+
+
+
+    box-sizing: border-box;
     background-color: map-get($mat-bs-accent, 50) !important;
-    .sign-up-box{
+
+    .sign-up-box {
+
+        box-sizing: border-box;
         padding: 16px 0px;
         border-radius: 4px;
         max-width: 100%;
-        background-color:  $custom-white-color;
-        font-family:  $custom-font-family;
-        color : $dark-primary-text;
+        background-color: $custom-white-color;
+        font-family: $custom-font-family;
+        color: $dark-primary-text;
 
-        .stepper-container{
+        .stepper-container {
             width: 100%;
-           
+
         }
-       
-        
+
+
     }
 }
-:host{
+
+:host {
     height: 100%;
 }
