--- a/src/app/app-signup/signup-stepper-container/signup-stepper-container.component.html
+++ b/src/app/app-signup/signup-stepper-container/signup-stepper-container.component.html
@@ -1,45 +1,41 @@
-<div fxLayout="row" fxLayoutAlign="center center"  class="signup-page-container">
-    <div class="sign-up-box" fxLayout="column" fxLayoutGap="16px" fxLayoutAlign="start center">
-        
-        <div  class="page-header-1">
-            SIGNUP
-        </div>
+<div fxLayout="row" fxLayoutAlign="center center" class="signup-page-container">
+	<div class="sign-up-box" fxLayout="column" fxLayoutGap="16px" fxLayoutAlign="start center">
+		<div class="page-header-1">
+			{{"SIGNUP" | translate}}
+		</div>
+		<div class="stepper-container">
+			<mat-stepper [linear]="true" #stepper>
+				<mat-step>
+					<!-- <mat-step [stepControl]="generalInfoFormGroup"> -->
 
-          <!-- <div ngClass.gt-md="pr-100 pl-100" class="stepper-container" > -->
-           <div  class="stepper-container" >
-            <mat-stepper [linear]="true" #stepper >
-                <mat-step  [stepControl]="generalInfoFormGroup" >
-                  <ng-template matStepLabel>General Information </ng-template>
-                   <app-general-info-form #generalInfoForm></app-general-info-form>
-                   <div fxLayout="row" fxLayoutAlign="space-between" fxLayoutGap = "8px">
-                      <button mat-button color="accent" matStepperPrevious>Back</button>
-                      <button mat-button color="primary" matStepperNext>Next</button>
-                  </div>
-                
-                </mat-step>
-                <mat-step [stepControl]="secondFormGroup" label="Professional Information      ">
-                  <form style="height:100%" [formGroup]="secondFormGroup">
-                    <mat-form-field appearance="fill">
-                      <mat-label>Address</mat-label>
-                      <input matInput formControlName="secondCtrl" placeholder="Ex. 1 Main St, New York, NY"
-                             required>
-                    </mat-form-field>
+					<ng-template matStepLabel>General Information </ng-template>
+					<app-general-info-form #generalInfoForm></app-general-info-form>
+					<div fxLayout="row" fxLayoutAlign="space-between" fxLayoutGap="8px">
+						<button mat-button color="accent" matStepperPrevious>Back</button>
+						<button mat-button color="primary" matStepperNext>Next</button>
+					</div>
 
-                  </form>
-                  <button mat-button matStepperPrevious>Back</button>
-                  <button mat-button matStepperNext>Next</button>
-                </mat-step>
-                
-                <mat-step>
-                  <ng-template matStepLabel>Bank Information;</ng-template>
-                  <p>You are now done.</p>
-                  <div>
-                    <button mat-button matStepperPrevious>Back</button>
-                    <button mat-button >Reset</button>
-                  </div>
-                </mat-step>
-              </mat-stepper>
-          </div>
-          
-    </div>
+				</mat-step>
+				<mat-step>
+					<!-- <mat-step [stepControl]="professionalInfoFormGroup"> -->
+					<ng-template matStepLabel>Professional Information </ng-template>
+					<app-professional-info-form #professionalInfoForm></app-professional-info-form>
+					<div fxLayout="row" fxLayoutAlign="space-between" fxLayoutGap="8px">
+						<button mat-button color="accent" matStepperPrevious>Back</button>
+						<button mat-button color="primary" matStepperNext>Next</button>
+					</div>
+				</mat-step>
+
+				<mat-step>
+					<ng-template matStepLabel>Bank Information</ng-template>
+					<app-bank-info-form #bankInfoForm></app-bank-info-form>
+
+					<div fxLayout="row" fxLayoutAlign="end" fxLayoutAlign.xs="center" fxLayoutGap="8px">
+						<button mat-raised-button color="primary">Complete</button>
+					</div>
+				</mat-step>
+			</mat-stepper>
+		</div>
+
+	</div>
 </div>
