--- a/src/app/shared/modules/file-uploader/components/file-uploader/file-uploader.component.scss
+++ b/src/app/shared/modules/file-uploader/components/file-uploader/file-uploader.component.scss
@@ -1,30 +1,40 @@
 @import "../../../../../../styles/themes/custom-palette.scss";
 @import "../../../../../../styles/shared/page-header.scss";
 
-.base-file-uploader{
-  height: 100%;
-  .file-input-box{
-    height: 100%;
-    padding : 8px 16px;
+.base-file-uploader {
 
-    .fake-uploader-box{
+  //height: 100%;
+  box-sizing: border-box;
+
+  .file-input-box {
+    //height: 100%;
+    box-sizing: border-box;
+
+    .fake-uploader-box {
       padding: 6px 12px;
       box-sizing: border-box;
-      border: map-get($mat-solid-border-accent, 'b2' );
-      border-radius: 8px;
-  
+
+
+      .file-name {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+
     }
-    .error-message{
-      color : map-get($mat-bs-error, "main" ) !important;
+
+    .error-message {
+      color: map-get($mat-bs-error, "main") !important;
       font-size: 12px;
     }
-  //  box-shadow: inset 0 0 0 12px rgb(0 0 0 / 37%);
-}
 
-.show-border-box{
+    //  box-shadow: inset 0 0 0 12px rgb(0 0 0 / 37%);
+  }
 
-  border: map-get($mat-solid-border-accent, 'b2' );
-  border-radius: 8px;
-}
-  
+  .show-border-box {
+
+    border: map-get($mat-solid-border-accent, 'b2');
+    border-radius: 8px;
+  }
+
 }
