--- a/src/app/root/root-default/root-default.component.scss
+++ b/src/app/root/root-default/root-default.component.scss
@@ -2,8 +2,8 @@
 @import "../../../styles/themes/custom-palette.scss";
 
 .root-default-container {
-  height: 100%;
-  overflow-y: scroll;
-  background-color: map-get($mat-bs-accent, 50) !important;
-  box-sizing: border-box;
+	height: 100%;
+	overflow-y: hidden;
+	background-color: map-get($mat-bs-accent, 50) !important;
+	box-sizing: border-box;
 }
